<resources>
    <string name="app_name">ClientCab</string>
    <string name="login">Login</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="cin">CIN</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="numero_de_telephone">Numero de telephone</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="saisir_votre_email_ici_svp">Saisir votre email ici svp</string>
    <string name="selectionner">Selectionner</string>
    <string name="date">Date</string>
    <string name="envoyer">Envoyer</string>
    <string name="heure">Heure</string>
    <string name="supprimer">Supprimer</string>
    <string name="etat_rdv">Etat RDV</string>
    <string name="heure_rdv">Heure RDV</string>
    <string name="etat">Etat:</string>
    <string name="valid_en_attente_refus">Validé/En Attente/Refusé</string>
    <string name="pr_nom">Prénom</string>
    <string name="e_mail">E-mail</string>
    <string name="inscription">Inscription</string>
    <string name="retour">Retour</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="cintext">CIN</string>
    <string name="num_ro_de_telephone">Numéro de telephone</string>
    <string name="date_de_naissancef">Date de naissance</string>
    <string name="m">M</string>
    <string name="f">F</string>
</resources>
