<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_text"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp">

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:id="@+id/in_date"
        android:hint="@string/date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/plus"
            style="@style/Bouton_blue"
            android:text="@string/selectionner"
            android:layout_alignBottom="@+id/date_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />



    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectionner"
        android:id="@+id/btn_time"
        android:src="@drawable/plus"
        style="@style/Bouton_blue"
        android:layout_below="@+id/date_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="49dp" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/envoyer"
        android:id="@+id/sending"
        style="@style/Bouton"
        android:layout_marginTop="181dp"
        android:layout_below="@+id/date_text"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heure_text"
        android:textColor="#000000"
        android:layout_alignTop="@+id/btn_time"
        android:layout_alignLeft="@+id/date_text"
        android:layout_alignStart="@+id/date_text">
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/in_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_time"
        android:layout_alignEnd="@+id/sending"
        android:layout_alignRight="@+id/sending"
        android:hint="@string/heure" />
</android.support.design.widget.TextInputLayout>

</RelativeLayout>