<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_text"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        >

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginvalue"
            android:hint="@string/login"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwd_text"
        android:layout_below="@+id/login_text"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:textColor="#000000"
        >
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pwdv"
            android:hint="@string/mot_de_passe"
            android:layout_below="@+id/loginvalue"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:id="@+id/ok"
        android:layout_marginTop="89dp"
        android:layout_below="@+id/pwd_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        style="@style/Bouton"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/errorColor"
        android:id="@+id/erreur"
        android:layout_below="@+id/ok"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />
</RelativeLayout>
