<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cin_text"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="32dp"
            >

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cinvalue"
                android:hint="@string/cin"
                android:inputType="number"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="32dp"
            >

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/namevalue"
                android:hint="@string/nom"
                android:inputType="text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prenom_text"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="32dp"
            >

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prenomvalue"
                android:hint="@string/prenom"
                android:inputType="text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/datenaiss_text"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="32dp"
            >

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/datenaissvalue"
                android:hint="@string/date_de_naissance"
                android:inputType="date"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tel_text"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="32dp"
            >

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/telvalue"
                android:hint="@string/numero_de_telephone"
                android:inputType="text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Inscription"
            android:id="@+id/inscription"
            android:layout_marginTop="89dp"
            style="@style/Bouton"
             />

        </RelativeLayout>
    </ScrollView>